# IrisOps

./: .gitignore  README.md  application.py  kubernetes-deployment.yaml  main.py  pyproject.toml  requirements.txt  setup.py
.circleci/: config.yaml
artifacts/models/: dt_model.pkl
artifacts/processed/: X_test.pkl  X_train.pkl  y_test.pkl  y_train.pkl
config/: data_ingestion_config.py  model_params.py  paths_config.py
notebooks/: Data-Analysis.ipynb
pipeline/: training_pipeline.py
src/: data_processing.py  model_training.py
templates/: index.html
utils/: helpers.py
